# HotWheels-Warmup

./: Git-guide.txt  README.md  a
.github/workflows/: cmake-single-platform.yml  module00-actions.yml  module00-ex02-action.yml  module00-ex03-action.yml  module01-actions.yml  module01-ex00-action.yml  module01-ex01-action.yml  module01-ex02-action.yml  module02-actions.yml  module03-actions.yml  module04-actions.yml  test-workflow.yml
ADR/: 001-RepoSetup.md  002-MonoOrSubmodules.md
Modules/: .gitignore
Modules/Module00/ex02/: CMakeLists.txt  main.cpp
Modules/Module00/ex02/tests/: script.sh
Modules/Module00/ex03/: CMakeLists.txt  Contact.cpp  Contact.hpp  Makefile  Phonebook.cpp  Phonebook.hpp  main.cpp  responses.txt
Modules/Module00/ex03/tests/: responses.sh  script.sh  test_phonebook.sh
Modules/Module00/exercise03/: Contact.hpp  Makefile  Phonebook.cpp
Modules/Module01/ex00/: CMakeLists.txt
Modules/Module01/ex00/includes/: Car.hpp
Modules/Module01/ex00/srcs/: Car.cpp  main.cpp
Modules/Module01/ex00/tests/: script.sh
Modules/Module01/ex01/: CMakeLists.txt  Makefile  a.out
Modules/Module01/ex01/includes/: Car.hpp  SportsCar.hpp
Modules/Module01/ex02/: CMakeLists.txt
Modules/Module01/ex02/includes/: ACar.hpp  ClassicCar.hpp  ElectricCar.hpp
Modules/Module01/ex02/sources/: ElectricCar.cpp
Modules/Module01/ex02/srcs/: ACar.cpp  ClassicCar.cpp  main.cpp
Modules/Module01/ex02/tests/: script.sh
Modules/Module01/srcs/: main.cpp
Modules/Module02/: ex00.md  teste.txt  tests.txt
Modules/Module02/ex01/: CMakeLists.txt  Makefile
Modules/Module02/ex01/includes/: Car.hpp  Car.md  Part.hpp
Modules/Module02/ex01/includes/engine/: Crankshaft.hpp  Engine.md  EngineSystem.hpp  Motor.hpp  Piston.hpp
Modules/Module02/ex01/includes/transmission/: Clutch.hpp  Gearbox.hpp  Transmission.md  TransmissionSystem.hpp
Modules/Module02/ex01/sources/: Car.cpp  Part.cpp  main.cpp
Modules/Module02/ex01/sources/engine/: Crankshaft.cpp  EngineSystem.cpp  Motor.cpp  Piston.cpp
Modules/Module02/ex01/sources/transmission/: Clutch.cpp  Gearbox.cpp  TransmissionSystem.cpp
Modules/Module02/ex01/tests/: expected_output.txt
Modules/Module03/: ContactList.txt  WrongContactList.txt  WrongContactList2.txt
Modules/Module03/Phonebook/: CMakeLists.txt.user.3f2d7c9  Contact.h  DialogSearch.h  Images.qrc  Phonebook.h  contact.cpp  dialogsearch.cpp  dialogsearch.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  phonebook.cpp
Modules/Module03/ex00/: CMakeLists.txt  Contact.h  Images.qrc  Phonebook.h  contact.cpp  mainwindow.ui  phonebook.cpp
Modules/Module03/ex00/Phonebook/: CMakeLists.txt  Utils.h  dialogsearch.cpp  phonebook.cpp  utils.cpp
Modules/Module03/tests/: script.sh
Modules/Module04/: CMakeLists.txt  CMakeLists.txt.user.f5c9800  Car.cpp  Car.h  CarDisplayManager.cpp  CarDisplayManager.h  CarSetupManager.cpp  CarSetupManager.h  CarThread.cpp  CarThread.h  RaceController.cpp  RaceController.h  RaceTrack.cpp  RaceTrack.h  RacingGame.cpp  RacingGame.h  RacingGame.ui  TrackView.cpp  TrackView.h  Utils.h  images.qrc
(+6 files in other folders)
